--- a/.github/workflows/check-snyk-vulnerabilities-python.yml
+++ b/.github/workflows/check-snyk-vulnerabilities-python.yml
@@ -13,6 +13,7 @@ jobs:
   check-has-readme:
     runs-on: ubuntu-latest
     steps:
+     - uses: actions/checkout@master
      - name: Run Snyk to check for vulnerabilities
        id: snyk
        uses: snyk/actions/python-3.8@master
