--- a/.github/workflows/check-snyk-vulnerabilities-python.yml
+++ b/.github/workflows/check-snyk-vulnerabilities-python.yml
@@ -37,7 +37,7 @@ jobs:
        with:
          clientId: ${{ secrets.PORT_CLIENT_ID }}
          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-         title: readme
+         title: snyk-checkrun-payment-service
          blueprint: CheckRun
          properties: |
            {
