--- a/.github/workflows/check-snyk-vulnerabilities-python.yml
+++ b/.github/workflows/check-snyk-vulnerabilities-python.yml
@@ -37,7 +37,7 @@ jobs:
        with:
          clientId: ${{ secrets.PORT_CLIENT_ID }}
          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-         title: snyk-checkrun-payment-service
+         title: snyk-checkrun-${{ github.event.repository.name }}
          blueprint: CheckRun
          properties: |
            {
@@ -45,7 +45,7 @@ jobs:
            }
          relations: |
            {
-             "service": "payment-service",
+             "service": "${{ github.event.repository.name }}",
              "check": "snyk-vulnerabilties"
            } 
         
