--- a/.github/workflows/check-snyk-vulnerabilities-python.yml
+++ b/.github/workflows/check-snyk-vulnerabilities-python.yml
@@ -35,7 +35,7 @@ jobs:
        with:
          clientId: ${{ secrets.PORT_CLIENT_ID }}
          clientSecret: ${{ secrets.PORT_CLIENT_SECRET }}
-         title: snyk-checkrun-${{ github.event.repository.name }}
+         title: snyk-${{ github.event.repository.name }}
          blueprint: CheckRun
          properties: |
            {
